[package]
name = "epics_gen"
version = "0.2.1"
edition = "2021"
authors = ["Luka Perusko <luka.wtup@gmail.com>"]

description = "Helpful macros for deserializing xlsx tables and serializing them as EPICS PVs"
keywords = ["EPICS", "xlsx", "macros", "proc-macros"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]
documentation = "https://docs.rs/epics-gen"
homepage = "https://github.com/wtup/epics-gen"
repository = "https://github.com/wtup/epics-gen"
readme = "../README.md"
license = "MIT"

[dependencies]
epics_gen_macros = { path = "../epics_gen_macros", optional = true, version = "0.2.1" }
calamine = "0.26.1"
regex = "1.11.0"

[features]
default = ["derive"]
derive = ["epics_gen_macros"]

[dev-dependencies]
strum = "0.26"
strum_macros = "0.26"
